unpackaged/main/default/objects/Marketing_Program_Region__c/Marketing_Program_Region__c.object-meta.xml
<CustomObject>
    <label>Marketing Program Region</label>
    <nameField>
        <displayFormat>DSR-{0000000}</displayFormat>
        <label>Marketing Program Region</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Program Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>