unpackaged/main/default/objects/Marketing_Program_Region__c/fields/BSF_Portfolio_Region__c.field-meta.xml
<CustomField>
    <fullName>BSF_Portfolio_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BSF Portfolio Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BSF_Portfolio__c.Portfolio_Type__c</field>
            <operation>equals</operation>
            <value>RDSE</value>
        </filterItems>
        <filterItems>
            <field>BSF_Portfolio__c.Taxonomy_Type__c</field>
            <operation>equals</operation>
            <value>Bio Recruitment CD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>BSF_Portfolio_Region</relationshipLabel>
    <relationshipName>BSF_Portfolio_Region</relationshipName>
    <type>Lookup</type>
</CustomField>