unpackaged/main/default/objects/Marketing_Program_Region__c/fields/Marketing_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program_Name__c</fullName>
    <formula>Marketing_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Program Name</label>
    <type>Text</type>
</CustomField>